tests/rosetta/out/Smalltalk/bioinformatics-global-alignment.out
/workspace/mochi/tests/rosetta/out/Smalltalk/bioinformatics-global-alignment.st:182: parse error, expected '|' or identifier
